--- a/style.css
+++ b/style.css
@@ -22,10 +22,10 @@ ul{
   width: 100%;
 }
 img{
-  max-width: 250px;
-  max-height: 250px;
   width: 100%;
-  height: 96px;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
 }
 header{
   display: flex;
@@ -96,10 +96,17 @@ h2{
 }
 
 .images-grid{
+  width: 100%;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-auto-rows: min-content;
+  grid-template-columns: repeat(auto-fit,minmax(100px,140px));
+  grid-auto-rows: 140px;
   gap: 15px;
+  place-content: center;
+}
+
+#img-container5{
+  position: absolute;
+  visibility: hidden;
 }
 .img-container{
   display: flex;
@@ -113,8 +120,6 @@ button{
   margin: 15px;
   padding: 10px;
   width: 60%;
-  justify-self: center;
-  grid-column-start: span 3;
   background-color: var(--header-color);
   border: none;
   color: white;
@@ -122,6 +127,14 @@ button{
   cursor: pointer;
   transition-duration: 300ms;
 }
+
+#reload-button{
+  display: flex;
+  margin: 0 auto;
+  margin-top: 15px;
+  justify-content: center;
+}
+
 .tittle-favorite{
   display: flex;
 align-items: center;
@@ -142,7 +155,7 @@ button:hover{
   position: absolute;
   padding: 0;
   width: fit-content;
-  font-size: 7rem;
+  font-size: 10rem;
   background-color: transparent;
   opacity: 0%;
 
