--- a/style.css
+++ b/style.css
@@ -22,10 +22,8 @@ ul{
   width: 100%;
 }
 img{
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  object-position: center;
+  height: 140px;
+  width: 140px;
 }
 header{
   display: flex;
@@ -79,6 +77,7 @@ footer i:hover{
   grid-template-columns: 100%;
   font-size: 1.2rem;
   justify-items: center;
+  overflow: unset;
 }
 a{
   text-decoration: none;
@@ -99,7 +98,7 @@ h2{
   width: 100%;
   display: grid;
   grid-template-columns: repeat(auto-fit,minmax(100px,140px));
-  grid-auto-rows: 140px;
+  grid-auto-rows: max-content;
   gap: 15px;
   place-content: center;
 }
@@ -165,7 +164,12 @@ button:hover{
   color: #FF4C29;
   text-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   box-shadow: none;
-  opacity: 80%;
+  opacity: 60%;
+  visibility: unset;
+}
+.favoriteButton:active{
+  opacity: 100%;
+
 }
 
 .deleteFavorite{
