--- a/style.css
+++ b/style.css
@@ -66,6 +66,7 @@ footer i{
   transition-duration: 400ms;
 }
 footer i:hover{
+  color: #FF4C29;
   text-shadow: rgba(255, 255, 255, 0.25) 0px 14px 28px, rgba(255, 255, 255, 0.22) 0px 10px 10px;
   font-size: 2.2rem;
 }
